# glass-bead-game

./: .gitignore  Cargo.toml  README.md  config-overrides.js  default.nix  package-lock.json  package.json
client/: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json  tsconfig.paths.json
client/public/: index.html
client/src/: About.tsx  App.tsx  Config.ts  GameTypes.ts  GlassBeadGameTopics.ts  Home.tsx  Interfaces.ts  glassbeadgame.service.ts  index.tsx  services.tsx
client/src/components/: AudioTimeSlider.tsx  AudioVisualiser.tsx  Button.tsx  CloseButton.tsx  CloseOnClickOutside.tsx  Column.tsx  FlagImage.tsx  GameSettingsModal.tsx  GameTypes.ts  GlassBeadGame.tsx  ImageFade.tsx  ImageTitle.tsx  Input.tsx  LoadingWheel.tsx  Markdown.tsx  Modal.tsx  Modals.tsx  NavBar.tsx  Row.tsx  Scrollbars.tsx  SearchSelector.tsx  SuccessMessage.tsx  glassbeadgame.service.ts
client/src/components/Cards/: BeadCard.tsx  GameCard.tsx
client/src/components/GlassBeadGame/: Comment.tsx  GlassBeadGame.tsx  Video.tsx  glassbeadgame.service.ts  types.tsx
client/src/components/Modals/: AlertModal.tsx  CreateGameModal.tsx  CreatePostModal.tsx  GBGBackgroundModal.tsx  (+6 more)
client/src/contexts/: AccountContext.tsx  PostContext.tsx
client/src/helpers/: util.ts
client/src/pages/: GamePage.tsx  GamesPage.tsx  HomePage.tsx
client/src/styles/: App.module.scss  App.scss  Colors.module.scss  Variables.scss
crates/file_storage_types/: Cargo.toml
dna/workdir/dna/: dna.yaml
dna/workdir/happ/: happ.yaml
dna/zomes/glassbeadgame/: Cargo.toml
dna/zomes/glassbeadgame/src/: game.rs  lib.rs  signals.rs
dna/zomes/glassbeadgame_core/: Cargo.toml
dna/zomes/glassbeadgame_core/src/: lib.rs
dna/zomes/weco/: Cargo.toml
dna/zomes/weco/src/: file_storage.rs  game.rs  lib.rs  post.rs  room.rs  user.rs
dna/zomes/weco/src/file_storage/: file_chunk.rs
dnas/glassbeadgame/workdir/: dna.yaml
dnas/glassbeadgame/zomes/coordinator/glassbeadgame/: Cargo.toml
dnas/glassbeadgame/zomes/coordinator/glassbeadgame/src/: game.rs  signals.rs
nix/: sources.json
test/: package-lock.json  package.json  tsconfig.json
test/src/: index.ts
ui/: .eslintignore  .eslintrc.js  .gitignore  README.md  package.json
ui/public/: index.html
ui/src/: GameTypes.ts  Helpers.ts  glassbeadgame.service.ts
ui/src/components/: AudioTimeSlider.tsx  DropDown.tsx  FlagImage.tsx  GlassBeadGame.tsx  ImageTitle.tsx  ProgressBarSteps.tsx  Scrollbars.tsx
ui/src/pages/: HomePage.tsx
ui/src/styles/: App.module.scss  Colors.module.scss  Variables.scss
we_dev/: config.json
workdir/: happ.yaml  web-happ.yaml
(+57 files in other folders)
