[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.3"
hdk = "0.2"
serde = "1"

[workspace.dependencies.glassbeadgame]
path = "dnas/glassbeadgame/zomes/coordinator/glassbeadgame"

[workspace.dependencies.glassbeadgame_integrity]
path = "dnas/glassbeadgame/zomes/integrity/glassbeadgame"

