[package]
name = "glassbeadgame"
version = "0.1.0"
edition = "2021"
authors = ["eric@harris-braun.com"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "glassbeadgame"

[dependencies]
hdk = {version = "0.0.155", features = ["encoding"]}
serde = "1.0"
derive_more = "0"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
glassbeadgame_core = { path = "../glassbeadgame_core" }
