[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "glassbeadgame_core"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "glassbeadgame_core"

[dependencies]
serde = "1"
derive_more = "0"
hdk = {version = "0.1.0", features = ["encoding"]}
hdi = {version = "0.2.0"}