[package]
name = "weco"
version = "0.1.0"
edition = "2018"
authors = ["test@test.com"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "weco"

[dependencies]
hdk = "0.0.116"
serde = "1.0"
derive_more = "0"
holo_hash = {version = "0.0.13", features = ["encoding"]}
chrono = "0.4"
hc_file_storage_types = {path = "../../../crates/file_storage_types"}
