[package]
name = "glassbeadgame"
version = "0.1.0"
edition = "2021"
authors = ["eric@harris-braun.com"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "glassbeadgame"

[dependencies]
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
hdk = { workspace = true }

serde = { workspace = true }

glassbeadgame_integrity = { workspace = true } 
